--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
-2023.335:
-	- Update documentation.
+2023.335: 0.2
+	- Update documentation
 	- Update to libdali v1.8.1
+	- Remove unused libmseed
 
 2011.005: 0.1
 	- Initial version, branch from slink2dali 0.4.
